@@ -564,7 +564,7 @@ static int __devinit fx_init(struct emu10k1_card *card)
 	u32 pc = 0;
 	u32 patch_n=0;
 
-	u32 base, zero, half, four;
+	u32 base, zero, half, two;
 	u32 analog_front_l, analog_front_r, analog_rear_l, analog_rear_r;
 	u32 analog_surround_l, analog_surround_r, analog_center, analog_lfe;
 	u32 spdif_front_l, spdif_front_r, spdif_rear_l, spdif_rear_r;
@@ -899,7 +899,7 @@ static int __devinit fx_init(struct emu10k1_card *card)
 	   base              = A_GPR_BASE;
 	   zero              = 0xc0;
 	   half              = 0xcd;
-	   four              = 0xc4;
+	   two               = 0xc2;
 	   analog_front_l    = A_ANALOG_FRONT_L;
 	   analog_front_r    = A_ANALOG_FRONT_R;
 	   analog_rear_l     = A_ANALOG_REAR_L;
@@ -937,7 +937,7 @@ static int __devinit fx_init(struct emu10k1_card *card)
 	   base              = GPR_BASE;
 	   zero              = 0x40;
 	   half              = 0x4d;
-	   four              = 0x44;
+	   two               = 0x42;
 	   analog_front_l    = L_ANALOG_FRONT_L;
 	   analog_front_r    = L_ANALOG_FRONT_R;
 	   analog_rear_l     = L_ANALOG_REAR_L;
@@ -976,16 +976,16 @@ static int __devinit fx_init(struct emu10k1_card *card)
 	OP(0, RES_AHI_CENTER+base,     zero, AHI_CENTER,     VOL_AHI_CENTER+base);
 	OP(0, RES_AHI_LFE+base,        zero, AHI_LFE,        VOL_AHI_LFE+base);
 
-	/* +12 dB volume correction, to make the streams use the full
+	/* +6 dB volume correction, to make the streams use the full
 	 * dynamic range (Why, oh why?) */
-	OP(4, RES_AHI_FRONT_L+base,    zero, RES_AHI_FRONT_L+base,    four);
-	OP(4, RES_AHI_FRONT_R+base,    zero, RES_AHI_FRONT_R+base,    four);
-	OP(4, RES_AHI_REAR_L+base,     zero, RES_AHI_REAR_L+base,     four);
-	OP(4, RES_AHI_REAR_R+base,     zero, RES_AHI_REAR_R+base,     four);
-	OP(4, RES_AHI_SURROUND_L+base, zero, RES_AHI_SURROUND_L+base, four);
-	OP(4, RES_AHI_SURROUND_R+base, zero, RES_AHI_SURROUND_R+base, four);
-	OP(4, RES_AHI_CENTER+base,     zero, RES_AHI_CENTER+base,     four);
-	OP(4, RES_AHI_LFE+base,        zero, RES_AHI_LFE+base,        four);
+	OP(4, RES_AHI_FRONT_L+base,    zero, RES_AHI_FRONT_L+base,    two);
+	OP(4, RES_AHI_FRONT_R+base,    zero, RES_AHI_FRONT_R+base,    two);
+	OP(4, RES_AHI_REAR_L+base,     zero, RES_AHI_REAR_L+base,     two);
+	OP(4, RES_AHI_REAR_R+base,     zero, RES_AHI_REAR_R+base,     two);
+	OP(4, RES_AHI_SURROUND_L+base, zero, RES_AHI_SURROUND_L+base, two);
+	OP(4, RES_AHI_SURROUND_R+base, zero, RES_AHI_SURROUND_R+base, two);
+	OP(4, RES_AHI_CENTER+base,     zero, RES_AHI_CENTER+base,     two);
+	OP(4, RES_AHI_LFE+base,        zero, RES_AHI_LFE+base,        two);
 	
 	/* Scale digital CD in */
 	OP(0, RES_SPDIF_CD_L+base, zero, spdif_cd_l, VOL_SPDIF_CD_L+base);
